# DemoPlugin

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
app/: CMakeLists.txt
app/src/: PluginManager.cpp  PluginManager.h  main.cpp
app/src/IDLLoader/Unix/: DLLoader.h
app/src/IDLLoader/Windows/: DLLoader.h
common/: CMakeLists.txt
common/src/: APlugin.cpp  APlugin.h  Export.h  Singleton.cpp  Singleton.h
plugin/: CMakeLists.txt
plugin/src/: DemoPlugin.cpp  DemoPlugin.h
