cmake_minimum_required(VERSION 3.25)

set(PROJECT Common)

enable_language(C CXX)
project(${PROJECT} CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmakeTargets")

set(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE PROJECT_SRC_RECURSE
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src PREFIX src FILES ${PROJECT_SRC_RECURSE})

add_library(${PROJECT} STATIC ${PROJECT_SRC_RECURSE})
set_target_properties(${PROJECT} PROPERTIES POSITION_INDEPENDENT_CODE ON)
set_target_properties(${PROJECT} PROPERTIES	LIBRARY_OUTPUT_DIRECTORY "${FINAL_BIN_DIR}")

target_include_directories(${PROJECT} PRIVATE src)
