cmake_minimum_required(VERSION 3.25)

set(PROJECT Common)

enable_language(C CXX)
project(${PROJECT} CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmakeTargets")

set(CMAKE_CXX_STANDARD 17)

file(GLOB_RECURSE PROJECT_SRC_RECURSE
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src PREFIX src FILES ${PROJECT_SRC_RECURSE})

add_library(${PROJECT} ${PROJECT_SRC_RECURSE})

if (BUILD_SHARED_LIBS)
	target_compile_definitions(${PROJECT} INTERFACE BUILD_SHARED_LIBS)
	set_target_properties(${PROJECT} PROPERTIES	RUNTIME_OUTPUT_DIRECTORY  "${FINAL_BIN_DIR}")
endif()

set_target_properties(${PROJECT} PROPERTIES POSITION_INDEPENDENT_CODE ON)

target_include_directories(${PROJECT} PRIVATE src)
